Fjerner InntektTjenesteV1 (#373)